add form component

--- a/src/tailwind-compiled.css
+++ b/src/tailwind-compiled.css
@@ -957,6 +957,77 @@ select {
     height: auto !important;
   } */
 
+/* ------------- For pesky TW elements -------------- */
+
+#multiselectbox > div > div > input {
+  /* background-color: #ff6db7; */
+  color: rgb(var(--color-content));
+}
+
+#multiselectbox > span  {
+  color: rgb(var(--color-contrast));
+}
+
+#contact-name {
+  color: rgb(var(--color-content));
+}
+
+#contact-name:focus {
+  color: rgb(var(--color-primary));
+}
+
+#contact-email {
+  color: rgb(var(--color-content));
+}
+
+#contact-email:focus {
+  color: rgb(var(--color-primary));
+}
+
+#contact-message {
+  color: rgb(var(--color-content));
+}
+
+#contact-message:focus {
+  color: rgb(var(--color-primary));
+}
+
+body > div.z-\[1070\] > div > div {
+  color: rgb(var(--color-content));
+  background-color: rgb(var(--color-bg2));
+}
+
+body > div.z-\[1070\] > div > div > div.list-none.m-0.p-0 > div > span {
+  color: rgb(var(--color-content));
+}
+
+body > div.z-\[1070\] > div > div > div.list-none.\!m-0.p-0 > div > span {
+  color: rgb(var(--color-content)) !important;
+}
+
+body > div.z-\[1070\] > div > div > div.list-none.m-0.\!p-0 > div > span {
+  color: rgb(var(--color-content)) !important;
+}
+
+body > div.z-\[1070\] > div > div > div.list-none.m-0.p-0 > div > span > span{
+  opacity: 0.8;
+  color: rgb(var(--color-content));
+}
+
+body > div.z-\[1070\] > div > div > div.list-none.\!m-0.p-0 > div > span > span{
+  opacity: 0.8 !important;
+  color: rgb(var(--color-content)) !important;
+}
+
+body > div.z-\[1070\] > div > div > div.list-none.m-0.\!p-0 > div > span > span{
+  opacity: 0.8 !important;
+  color: rgb(var(--color-content)) !important;
+}
+
+body > div.z-\[1070\] > div > div > div.flex.flex-row.items-center.justify-between.w-full.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
+  color: rgb(var(--color-content));
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -1795,21 +1866,6 @@ select {
   flex-shrink: 0;
 }
 
-.radio {
-  flex-shrink: 0;
-  --chkbg: var(--bc);
-  height: 1.5rem;
-  width: 1.5rem;
-  cursor: pointer;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  border-radius: 9999px;
-  border-width: 1px;
-  border-color: var(--fallback-bc,oklch(var(--bc)/var(--tw-border-opacity)));
-  --tw-border-opacity: 0.2;
-}
-
 .select {
   display: inline-flex;
   cursor: pointer;
@@ -1842,48 +1898,6 @@ select {
 
 .select[multiple] {
   height: auto;
-}
-
-.swap {
-  position: relative;
-  display: inline-grid;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
-  place-content: center;
-  cursor: pointer;
-}
-
-.swap > * {
-  grid-column-start: 1;
-  grid-row-start: 1;
-  transition-duration: 300ms;
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-  transition-property: transform, opacity;
-}
-
-.swap input {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-}
-
-.swap .swap-on,
-.swap .swap-indeterminate,
-.swap input:indeterminate ~ .swap-on {
-  opacity: 0;
-}
-
-.swap input:checked ~ .swap-off,
-.swap-active .swap-off,
-.swap input:indeterminate ~ .swap-off {
-  opacity: 0;
-}
-
-.swap input:checked ~ .swap-on,
-.swap-active .swap-on,
-.swap input:indeterminate ~ .swap-indeterminate {
-  opacity: 1;
 }
 
 .tabs {
@@ -2572,32 +2586,6 @@ input.tab:checked + .tab-content,
   }
 }
 
-.radio:focus {
-  box-shadow: none;
-}
-
-.radio:focus-visible {
-  outline-style: solid;
-  outline-width: 2px;
-  outline-offset: 2px;
-  outline-color: var(--fallback-bc,oklch(var(--bc)/1));
-}
-
-.radio:checked,
-  .radio[aria-checked="true"] {
-  --tw-bg-opacity: 1;
-  background-color: var(--fallback-bc,oklch(var(--bc)/var(--tw-bg-opacity)));
-  background-image: none;
-  animation: radiomark var(--animation-input, 0.2s) ease-out;
-  box-shadow: 0 0 0 4px var(--fallback-b1,oklch(var(--b1)/1)) inset,
-      0 0 0 4px var(--fallback-b1,oklch(var(--b1)/1)) inset;
-}
-
-.radio:disabled {
-  cursor: not-allowed;
-  opacity: 0.2;
-}
-
 @keyframes radiomark {
   0% {
     box-shadow: 0 0 0 12px var(--fallback-b1,oklch(var(--b1)/1)) inset,
@@ -2681,49 +2669,6 @@ input.tab:checked + .tab-content,
   to {
     background-position: -50%;
   }
-}
-
-.swap-rotate .swap-on,
-.swap-rotate .swap-indeterminate,
-.swap-rotate input:indeterminate ~ .swap-on {
-  --tw-rotate: 45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.swap-rotate input:checked ~ .swap-off,
-.swap-active:where(.swap-rotate) .swap-off,
-.swap-rotate input:indeterminate ~ .swap-off {
-  --tw-rotate: -45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.swap-rotate input:checked ~ .swap-on,
-.swap-active:where(.swap-rotate) .swap-on,
-.swap-rotate input:indeterminate ~ .swap-indeterminate {
-  --tw-rotate: 0deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.swap-flip .swap-on,
-.swap-flip .swap-indeterminate,
-.swap-flip input:indeterminate ~ .swap-on {
-  transform: rotateY(180deg);
-  backface-visibility: hidden;
-  opacity: 1;
-}
-
-.swap-flip input:checked ~ .swap-off,
-.swap-active:where(.swap-flip) .swap-off,
-.swap-flip input:indeterminate ~ .swap-off {
-  transform: rotateY(-180deg);
-  backface-visibility: hidden;
-  opacity: 1;
-}
-
-.swap-flip input:checked ~ .swap-on,
-.swap-active:where(.swap-flip) .swap-on,
-.swap-flip input:indeterminate ~ .swap-indeterminate {
-  transform: rotateY(0deg);
 }
 
 .tabs-lifted > .tab:focus-visible {
@@ -3943,8 +3888,8 @@ input.tab:checked + .tab-content,
   margin-bottom: 2rem;
 }
 
-.ml-8 {
-  margin-left: 2rem;
+.mb-\[0\.125rem\] {
+  margin-bottom: 0.125rem;
 }
 
 .ml-auto {
@@ -4163,6 +4108,10 @@ input.tab:checked + .tab-content,
   max-height: 100%;
 }
 
+.min-h-\[1\.5rem\] {
+  min-height: 1.5rem;
+}
+
 .min-h-\[32px\] {
   min-height: 32px;
 }
@@ -4328,6 +4277,18 @@ input.tab:checked + .tab-content,
 .min-w-max {
   min-width: -moz-max-content;
   min-width: max-content;
+}
+
+.min-w-48 {
+  min-width: 12rem;
+}
+
+.min-w-80 {
+  min-width: 20rem;
+}
+
+.min-w-96 {
+  min-width: 24rem;
 }
 
 .max-w-\[200px\] {
@@ -5205,6 +5166,11 @@ input.tab:checked + .tab-content,
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
 }
 
+.bg-pink-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 168 212 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -5213,8 +5179,18 @@ input.tab:checked + .tab-content,
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
 
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
 .bg-none {
   background-image: none;
+}
+
+.from-cyan-500 {
+  --tw-gradient-from: #06b6d4 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(6 182 212 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .from-primary\/10 {
@@ -5233,6 +5209,10 @@ input.tab:checked + .tab-content,
   --tw-gradient-from: #ccfbf1 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(204 251 241 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-blue-500 {
+  --tw-gradient-to: #3b82f6 var(--tw-gradient-to-position);
 }
 
 .to-primary\/60 {
@@ -5399,6 +5379,11 @@ input.tab:checked + .tab-content,
   padding-bottom: 0.5rem;
 }
 
+.py-2\.5 {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -5448,12 +5433,20 @@ input.tab:checked + .tab-content,
   padding-left: 0.25rem;
 }
 
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
 .pl-3 {
   padding-left: 0.75rem;
 }
 
 .pl-7 {
   padding-left: 1.75rem;
+}
+
+.pl-\[1\.5rem\] {
+  padding-left: 1.5rem;
 }
 
 .pt-1 {
@@ -5466,6 +5459,10 @@ input.tab:checked + .tab-content,
 
 .pt-4 {
   padding-top: 1rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
 .pt-\[0\.30rem\] {
@@ -5645,6 +5642,10 @@ input.tab:checked + .tab-content,
 
 .tracking-normal {
   letter-spacing: 0em;
+}
+
+.\!text-content\/70 {
+  color: rgb(var(--color-content) / 0.7) !important;
 }
 
 .\!text-danger-700 {
@@ -6514,8 +6515,83 @@ a:hover {
     );
 }
 
+body > div.z-\[1070\] > div > div > div.flex.flex-row.items-center.justify-between.slider-container.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
+  color: rgb(var(--color-content));
+}
+
 .slider-container {
   width: 100%;
+}
+
+body > div.z-\[1070\] > div > div > .\*\:select-none > *div.flex.flex-row.items-center.justify-between.w-full.px-4.truncate.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
+  color: rgb(var(--color-content));
+}
+
+body > div.z-\[1070\] > div > div > .before\:bg-transparentdiv.flex.flex-row.items-center.justify-between.w-full.px-4.truncate.select-none.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span::before {
+  content: var(--tw-content);
+  color: rgb(var(--color-content));
+}
+
+body > div.z-\[1070\] > div > div > .checked\:after\:bg-transparent:checkeddiv.flex.flex-row.items-center.justify-between.w-full.px-4.truncate.select-none.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span::after {
+  content: var(--tw-content);
+  color: rgb(var(--color-content));
+}
+
+body > div.z-\[1070\] > div > div > .hover\:bg-transparent:hoverdiv.flex.flex-row.items-center.justify-between.w-full.px-4.truncate.select-none.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
+  color: rgb(var(--color-content));
+}
+
+body > div.z-\[1070\] > div > div > .hover\:cursor-pointer:hoverdiv.flex.flex-row.items-center.justify-between.w-full.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30 > span {
+  color: rgb(var(--color-content));
+}
+
+body > div.z-\[1070\] > div > div > .focus\:text-gray-700:focusdiv.flex.flex-row.items-center.justify-between.w-full.px-4.truncate.select-none.bg-transparent.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
+  color: rgb(var(--color-content));
+}
+
+body > div.z-\[1070\] > div > div > .checked\:focus\:after\:bg-transparent:focus:checkeddiv.flex.flex-row.items-center.justify-between.w-full.px-4.truncate.select-none.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span::after {
+  content: var(--tw-content);
+  color: rgb(var(--color-content));
+}
+
+body > div.z-\[1070\] > div > div > .disabled\:select-none:disableddiv.flex.flex-row.items-center.justify-between.w-full.px-4.truncate.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
+  color: rgb(var(--color-content));
+}
+
+body > div.z-\[1070\] > div > div > :is(.dark .dark\:hover\:bg-transparent:hover)div.flex.flex-row.items-center.justify-between.w-full.px-4.truncate.select-none.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
+  color: rgb(var(--color-content));
+}
+
+@media (min-width: 640px) {
+  body > div.z-\[1070\] > div > div > div.sm\:flex-row.flex.items-center.justify-between.w-full.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
+    color: rgb(var(--color-content));
+  }
+}
+
+@media (min-width: 768px) {
+  body > div.z-\[1070\] > div > div > div.md\:flex-row.flex.items-center.justify-between.w-full.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
+    color: rgb(var(--color-content));
+  }
+}
+
+@media (min-width: 1024px) {
+  body > div.z-\[1070\] > div > div > div.lg\:flex-row.flex.items-center.justify-between.w-full.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
+    color: rgb(var(--color-content));
+  }
+}
+
+@media (min-width: 1280px) {
+  body > div.z-\[1070\] > div > div > div.xl\:flex.flex-row.items-center.justify-between.w-full.px-4.truncate.select-none.bg-transparent.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
+    color: rgb(var(--color-content));
+  }
+}
+
+body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-button\]\:bg-transparent::-webkit-scrollbar-buttondiv.flex.flex-row.items-center.justify-between.w-full.px-4.truncate.select-none.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
+  color: rgb(var(--color-content));
+}
+
+body > div.z-\[1070\] > div > div > .\[\&\:\:-webkit-scrollbar-track-piece\]\:bg-transparent::-webkit-scrollbar-track-piecediv.flex.flex-row.items-center.justify-between.w-full.px-4.truncate.select-none.text-gray-700.dark\:text-gray-200.hover\:bg-black\/5.dark\:hover\:bg-white\/30.cursor-pointer > span {
+  color: rgb(var(--color-content));
 }
 
 @media (min-width: 768px) {
@@ -6558,14 +6634,51 @@ a:hover {
   position: absolute;
 }
 
+.before\:left-2\/4::before {
+  content: var(--tw-content);
+  left: 50%;
+}
+
+.before\:top-2\/4::before {
+  content: var(--tw-content);
+  top: 50%;
+}
+
+.before\:block::before {
+  content: var(--tw-content);
+  display: block;
+}
+
+.before\:h-12::before {
+  content: var(--tw-content);
+  height: 3rem;
+}
+
 .before\:h-\[0\.875rem\]::before {
   content: var(--tw-content);
   height: 0.875rem;
 }
 
+.before\:w-12::before {
+  content: var(--tw-content);
+  width: 3rem;
+}
+
 .before\:w-\[0\.875rem\]::before {
   content: var(--tw-content);
   width: 0.875rem;
+}
+
+.before\:-translate-x-2\/4::before {
+  content: var(--tw-content);
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.before\:-translate-y-2\/4::before {
+  content: var(--tw-content);
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .before\:scale-0::before {
@@ -6597,6 +6710,13 @@ a:hover {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.before\:transition-opacity::before {
+  content: var(--tw-content);
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .before\:content-\[\'\'\]::before {
   --tw-content: '';
   content: var(--tw-content);
@@ -6617,12 +6737,23 @@ a:hover {
   content: var(--tw-content);
 }
 
+.checked\:border-bg2:checked {
+  --tw-border-opacity: 1;
+  border-color: rgb(var(--color-bg2) / var(--tw-border-opacity));
+}
+
 .checked\:border-primary:checked {
   --tw-border-opacity: 1;
   border-color: rgb(var(--color-primary) / var(--tw-border-opacity));
 }
 
 .checked\:bg-primary:checked {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--color-primary) / var(--tw-bg-opacity));
+}
+
+.checked\:before\:bg-primary:checked::before {
+  content: var(--tw-content);
   --tw-bg-opacity: 1;
   background-color: rgb(var(--color-primary) / var(--tw-bg-opacity));
 }
@@ -6754,6 +6885,11 @@ a:hover {
   border-color: rgb(var(--color-secondary) / 0);
 }
 
+.hover\:bg-bg2:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--color-bg2) / var(--tw-bg-opacity));
+}
+
 .hover\:bg-black\/5:hover {
   background-color: rgb(0 0 0 / 0.05);
 }
@@ -6766,6 +6902,11 @@ a:hover {
 .hover\:bg-neutral-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-primary:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--color-primary) / var(--tw-bg-opacity));
 }
 
 .hover\:bg-sky-100:hover {
@@ -6790,6 +6931,10 @@ a:hover {
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gradient-to-bl:hover {
+  background-image: linear-gradient(to bottom left, var(--tw-gradient-stops));
 }
 
 .hover\:bg-gradient-to-br:hover {
@@ -6819,6 +6964,10 @@ a:hover {
 .hover\:text-black:hover {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.hover\:text-content\/70:hover {
+  color: rgb(var(--color-content) / 0.7);
 }
 
 .hover\:text-contentLinkHover:hover {
@@ -6895,6 +7044,11 @@ a:hover {
   outline-offset: 2px;
 }
 
+.hover\:before\:opacity-10:hover::before {
+  content: var(--tw-content);
+  opacity: 0.1;
+}
+
 .hover\:before\:opacity-\[0\.04\]:hover::before {
   content: var(--tw-content);
   opacity: 0.04;
@@ -6905,6 +7059,12 @@ a:hover {
   --tw-shadow: 0px 0px 0px 13px rgba(0,0,0,0.6);
   --tw-shadow-colored: 0px 0px 0px 13px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.after\:hover\:bg-primary:hover::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--color-primary) / var(--tw-bg-opacity));
 }
 
 .focus\:isolate:focus {
@@ -6922,6 +7082,11 @@ a:hover {
 
 .focus\:border-transparent:focus {
   border-color: transparent;
+}
+
+.focus\:bg-bg2:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--color-bg2) / var(--tw-bg-opacity));
 }
 
 .focus\:text-gray-700:focus {
@@ -6966,6 +7131,17 @@ a:hover {
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.focus\:ring-4:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-primary:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(var(--color-primary) / var(--tw-ring-opacity));
 }
 
 .focus\:transition-\[border-color_0\.2s\]:focus {
