--- a/src/tailwind-compiled.css
+++ b/src/tailwind-compiled.css
@@ -3808,6 +3808,16 @@ input.tab:checked + .tab-content,
   margin-bottom: 2.25rem;
 }
 
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .\!mt-0 {
   margin-top: 0px !important;
 }
@@ -4256,6 +4266,10 @@ input.tab:checked + .tab-content,
 
 .w-screen {
   width: 100vw;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .min-w-0 {
@@ -5173,6 +5187,11 @@ input.tab:checked + .tab-content,
 .bg-pink-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 168 212 / var(--tw-bg-opacity));
+}
+
+.bg-secondary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(var(--color-secondary) / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
